Cleanup old images; add correct KittyKaya logo; update programming page

--- a/event/programming.html
+++ b/event/programming.html
@@ -92,80 +92,68 @@
   <h1 class="sec01">
   <h1>RVR Programming</h1>
   <hr>
-  <p>We are reworking our schedule and planned content. We anticipate that most of our planned programming will stay the same as our planned 2020 lineup. Stay tuned for updates this fall!</p>
-  <!--<p>We're planning an incredible event stacked with fashion shows, a tea party, EGL trivia, games, panels, and shopping.</p>
-  <p>We will release more information about official event programming in 2020, including special guest panels and VIP events.</p>
-  <p>Applications for models and coordinate contest entrants will open in August 2020.</p>
+  <p>We're planning an incredible event stacked with fashion shows, a tea party, games, panels, and shopping.</p>
+  <p>We will release more information about official event programming as we get closer to the event, including special guest panels and VIP events.</p>
+  <p>Interested in presenting a panel at Royal Vegas Retreat? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1. We will notify prospective panelists of acceptance, rejection, or waitlist status by October 9.</p>
+  <p>Applications for models and coordinate contest entrants will open in September and October. Please stay tuned for more details!</p>
+  <p>Interested in casual excursions around the strip? Join our <a href="https://www.facebook.com/groups/royalvegasretreat">Facebook group</a> to help us plan!</p>
   <p>Check out our tentative schedule below - subject to change prior to event.</p>
   <h2 class="section-header">Before the Event</h2>
   <h4>VIP Badge Pickup</h4>
   <p>Calling all VIPs! Arrive Thursday, the day before the main event starts, to pick up your badge before everyone else. Get settled in and start the party!</p>
   <p><b>VIP Perk:</b> Early badge pickup is open to VIPs, special guests, and staff only.</p>
   <h2 class="section-header">Day 1</h2>
-  <h3 class="section-header">Friday, November 20 2020</h3>
+  <h3 class="section-header">Friday, November 19 2021</h3>
   <h4>VIP Mixer</h4>
-  <p>Calling all VIPs! Get your pre-funk on bright and early on Friday for an exclusive mixer. Meet your fellow VIPs, get your bearings, and relax before the main content starts.</p>
+  <p>Calling all VIPs! Get your pre-funk on bright and early on Friday for an exclusive mixer. Meet your fellow VIPs and get some early shopping time in!</p>
   <p><b>VIP Perk:</b> This event is open to VIPs, special guests, and staff only.</p>
   <h4>Shopping</h4>
-  <p>All day long, enjoy browsing our vendors' room for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
-  <p><b>VIP Perk:</b> VIPs get an additional hour of shopping time.</p>
-  <h4>Scavenger Hunt</h4>
-  <p>Want to meet new people and make friends? Looking for a way to strike up conversation? Pick up your scavenger hunt sheet as soon as the convention opens. Complete your scavenger hunt by finding a different attendee who meets each criterion: from a given state, wearing a specific print, etc. - and have them sign their name when you find them. If you complete your sheet, you may hand it in to RVR staff at any time, and we will enter you in a raffle for a fabulous prize. We will announce the winner at the closing remarks.</p>
+  <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Fashion Shows</h4>
   <p>All Friday and Saturday afternoon, our brands, sponsors, and special guests will show off their newest and best collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <p>Interested in modeling at the fashion show? Applications will open August 2020.</p>
-  <p>The schedule of designers and brands at the fashion show will be released October 2020.</p>
-  <h4>Coord Contest - Novice</h4>
-  <p>Thinking about trying your hand at a coord contest? Want to bring your coording skills to the next level? If you've never won a coord contest before, the Novice Coord Contest is for you! Show off your best Lolita fashion outfit in any substyle.</p> 
+  <h4>Coord Contest - Lolita Fashion General</h4>
+  <p>Love to compete? Put your coording skills to the test. All Lolita fashion and Lolita-adjacent (i.e. Ouji, EGA, fusion with other J-fashion, etc.) coordinates welcome.</p> 
   <p>Judges and prizes to be announced.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <p>Interested in Ouji fashion? Consider entering our Ouji coord contest instead.</p>
-  <h4>Coord Contest - Ouji</h4>
-  <p>Do you love Ouji and Boystyle fashion? This is the contest for you! Regardless of your experience level or previous coord contest wins, all dapper Oujis are encouraged to apply. Show off your best Ouji coord!</p>
-  <p>Judges and prizes to be announced.</p>
-  <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <h4>Special Guest Panel</h4>
-  <p>To be announced!</p>
+  <h4>Special Guest Panels</h4>
+  <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
-  <h4>Trivia</h4>
-  <p>Are you a Lolita genius? Have you been into the fashion since before the Livejournal days? This is the contest for you! Test your knowledge by answering questions in a Lolita trivia marathon.</p>
-  <p>Prizes to be announced.</p>
-  <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <h4>Pajama Party Movie Screening</h4>
-  <p>Get comfy! Change into your cutest pajamas or kigu for a late-night movie screening. Snuggle up for a spirited viewing of an iconic fashion classic.</p>
-  <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
+  <h4>Community Panels</h4>
+  <p>More info coming soon! For now, you can fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1.</p>
+  <h4>Late-night content</h4>
+  <p>We are planning exciting, interactive content for night owls - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 2</h2> 
-  <h3 class="section-header">Saturday, November 21 2020</h3>
+  <h3 class="section-header">Saturday, November 20 2021</h3>
   <h4>Shopping</h4>
-  <p>All day long, enjoy browsing our vendors' room for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
-  <p><b>VIP Perk:</b> VIPs get an additional hour of shopping time.</p>
+  <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
+  <h4>Swap Meet</h4>
+  <p>Support the secondhand market! Shop 'til you drop or <a href="https://www.eventbrite.com/e/rvr-2021-swap-meet-tickets-168024398499">sign up to sell starting September 6</a>. See our <a href="./swap-meet.html">Swap Meet page</a> for more details.</p>
   <h4>Special Guest Panels</h4>
   <p>To be announced!</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Fashion Shows</h4>
   <p>All Friday and Saturday afternoon, our brands, sponsors, and special guests will show off their newest and best collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <h4>Coord Contest - Handmade</h4>
+  <h4>Coord Contest - Lolita Fashion Handmade</h4>
   <p>Are you a talented sewist who regularly makes their own coords? Wear your best handmade outfit - by which we mean all main pieces (dresses, blouses, skirts, trousers, vests, etc.) must be handmade by you! Entrants are not required to make their own shoes, socks, accessories, or jewelry, but we strongly encourage you to show off as much of your handiwork as possible!</p>
   <p>Judges and prizes to be announced.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <h4>Coord Contest - Master</h4>
-  <p>Are you a coordinate contest winner? Do you spend hours searching for and buying the best possible pieces? Do you love glamorous, one-of-a-kind, next-level coords? Are you the kind of person who likes to do a little casual soldering in preparation for a big event? The master coord contest is for you!</p>
-  <p>If you have ever won a coordinate contest in the past (use your best judgment) - enter the master contest, not the novice contest.</p>
-  <p>Judges and prizes to be announced.</p>
-  <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
-  <h4>Dance</h4>
-  <p>Attendees will dance the night away at this high-energy event.</p>
+    <h4>Special Guest Panels</h4>
+  <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
+  <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
+  <h4>Community Panels</h4>
+  <p>More info coming soon! For now, you can fill out <a href="https://docs.google.com/forms/d/1YxTfMdrMICPshCWJZEhVzcrM3m3JuhnM3vMHU5QEQy4/edit?usp=sharing">our community panelist application</a> by October 1.</p>
+  <h4>Late-night content</h4>
+  <p>We are planning exciting, interactive content for night owls - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 3</h2>
-  <h3 class="section-header">Sunday, November 22 2020</h3>
+  <h3 class="section-header">Sunday, November 21 2021</h3>
   <h4>Shopping</h4>
-  <p>All day long, enjoy browsing our vendors' room for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
-  <p><b>VIP Perk:</b> VIPs get an additional hour of shopping time.</p>
+  <p>Enjoy browsing our vendors' room for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Special Guest Panels</h4>
-  <p>To be announced!</p>
+  <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Tea Party</h4>
   <p>The highlight of any Lolita fashion event: the tea party! Included with every GA and VIP ticket, the tea party will be an elegant affair, with pastries, desserts, savory eats, and of course - tea!</p>
@@ -178,9 +166,9 @@
   <h1 class="sec01">
   <h1>RVR Schedule</h1>
   <hr>
-  <p>We will release the official schedule in October 2020.  Stay tuned!</p>
+  <p>We will release the official schedule in October 2021.  Stay tuned!</p>
   
-  <hr>-->
+  <hr>
 
 </div>
 
