--- a/event/vendors.html
+++ b/event/vendors.html
@@ -193,10 +193,10 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 <p/>
 <hr>
-<h2><a href="https://www.etsy.com/shop/kittykaya">KittyKaya</a></h2>
+<h2><a href="https://www.etsy.com/shop/kittykaya">Kittykaya</a></h2>
     <div class="row">
         <div class="col-md-4">
-  <img src="../images/vendors/KittyKayaLogo.png" class="img-fluid" alt="KittyKaya logo"/>
+  <img src="../images/vendors/KittykayaLogo.png" class="img-fluid" alt="Kittykaya logo"/>
 </div>
   <div class="col-md-8">
 <p>Hello this is Christina, the creator behind Kittykaya! Kittykaya’s apparel features my own original artwork based on lolita fashion and kawaii culture. I’ve been around awhile and I found it was difficult to wear lolita every day. Now that I’ve started a family of my own I needed more comfortable looks that still filled my lolita heart. My clothing bridges the gap between comfy and cute!</p>
