Update partner pass and VIP verbiage; add blurb about Fluffy Show to fashion shows on programming page

--- a/event/programming.html
+++ b/event/programming.html
@@ -110,7 +110,8 @@
   <h4>Shopping</h4>
   <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Fashion Shows</h4>
-  <p>All Friday and Saturday afternoon, our brands, sponsors, and special guests will show off their newest and best collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
+  <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
+  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show!</a> On September 14, we will open our shows to applications on Fluffy Show. Application deadline: October 19</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion General</h4>
   <p>Love to compete? Put your coording skills to the test. All Lolita fashion and Lolita-adjacent (i.e. Ouji, EGA, fusion with other J-fashion, etc.) coordinates welcome.</p> 
@@ -134,7 +135,8 @@
   <p>To be announced!</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Fashion Shows</h4>
-  <p>All Friday and Saturday afternoon, our brands, sponsors, and special guests will show off their newest and best collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
+  <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
+  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show!</a> On September 14, we will open our shows to applications on Fluffy Show. Application deadline: October 19</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion Handmade</h4>
   <p>Are you a talented sewist who regularly makes their own coords? Wear your best handmade outfit - by which we mean all main pieces (dresses, blouses, skirts, trousers, vests, etc.) must be handmade by you! Entrants are not required to make their own shoes, socks, accessories, or jewelry, but we strongly encourage you to show off as much of your handiwork as possible!</p>
