--- a/event/reg.html
+++ b/event/reg.html
@@ -102,8 +102,8 @@
       <li><b>Partner Pass</b>: $20</li>
     </ul>
   </p>
-  <p>VIP ticketholders receive an exclusive premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content.</p>
-  <p>The Partner Pass is a special ticket type for partners, parents, and friends of attendees who do not wear J-fashion but wish to travel together. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content (more info coming soon). We may expand the scope of the partner pass as we decide what other programming we can offer safely at our event.</p>
+  <p>VIP ticketholders receive an exclusive premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and main stage content.</p>
+  <p>The Partner Pass is a special ticket type for partners, parents, and friends of attendees who do not wear J-fashion but wish to travel together. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content.</p>
   <p>We are no longer offering Sunday-only tickets.</p> 
   <p>We are proud to announce that we have an official room block with the MGM Grand with an excellent event rate. Please visit our <a href="./venue.html">Room Block and Venue</a> page for more information and to make your reservation with the MGM Grand now!</p>
   <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>
