Add Ghost Girl to special guests and vendors; cleanup comments

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -114,6 +114,19 @@
 </div>
 </div>
   <hr>
+  <h2>GHOST GiRL GOODS</h2>
+    <div class="row">
+        <div class="col-md-6">
+  <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
+</div>
+  <div class="col-md-6">
+  <p>GHOST GiRL GOODS is a clothing brand that fuses cool hip-hop looks and cute pop style into one. Our goals are to embrace differences and encourage confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration while designing each piece. GHOST GiRL GOODS has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. The GHOST GiRL GOODS team looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
+</div>
+<div class="col-md-12">
+  <p>You can find GHOST GiRL GOODS at <a href="https://www.ghostgirlgoods.com/">https://www.ghostgirlgoods.com/</a> as well as on <a href="https://www.facebook.com/ghostgirlgoods">Facebook</a>, <a href="https://www.instagram.com/ghostgirlgoods/">Instagram</a>, <a href="https://www.youtube.com/c/theofficialghostgirlchannel">YouTube</a>, and <a href="https://twitter.com/ghostgirlgoods">Twitter</a>.</p>
+</div>
+</div>
+  <hr>
   <h2><a href="https://www.jadedisland.com">JadedIsland</a></h2>
     <div class="row">
         <div class="col-md-4">
@@ -155,24 +168,6 @@
 </div>
 </div>
   <!--
-  <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
-  <div class="row">
-    <div class="col-md-4">
-  <img src="../images/guests/aito2.jpg" class="img-fluid" alt="Royal Princess Alice and Bio-Politics designer Aito"/>
-</div>
-<div class="col-md-8">
-  <p>【RoyalPrincessAlice】</p>
-  <p>Noble like European Princess</p>
-  <p>Mysterious, cute and dark like the world of Alice ...</p>
-  <p>It is a Gothic & Lolita brand with the concept of such a world view.</p>
-  <p>In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
-  <p>【bio ・politics】</p>
-  <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
-</div>
-<div class="col-md-12">
-  <p>Shop the brands online at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
-</div>
-</div>
   <h2>Lovely Lor and Holly Flynn</h2>
   <div class="row">
     <div class="col-md-6">
@@ -186,22 +181,6 @@
   <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
 </div>
 </div>-->
-<!--
-  <hr>
-  <h2>GHOST GiRL GOODS</h2>
-    <div class="row">
-        <div class="col-md-6">
-  <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
-</div>
-  <div class="col-md-6">
-  <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
-</div>
-<div class="col-md-12">
-  <p>You can find GHOST GiRL GOODS at <a href="https://www.ghostgirlgoods.com/">https://www.ghostgirlgoods.com/</a> as well as on <a href="https://www.facebook.com/ghostgirlgoods">Facebook</a>, <a href="https://www.instagram.com/ghostgirlgoods/">Instagram</a>, <a href="https://www.youtube.com/c/theofficialghostgirlchannel">YouTube</a>, and <a href="https://twitter.com/ghostgirlgoods">Twitter</a>.</p>
-</div>
-</div>
-  <hr>
-  <p>We are working with the brightest talent, and we're truly excited about all of our special guests. Watch our <a href="https://www.facebook.com/ppcllcrvr">Facebook page</a> and sign up for our <a href="https://buttondown.email/prettyprincessclub">newsletter</a> for the latest announcements.</p>-->
   <hr>
 
 </div>
