--- a/event/vendors.html
+++ b/event/vendors.html
@@ -142,6 +142,16 @@
 Occasionally, we also dip into more sophisticated Classic and Gothic Lolita themes or create some pop culture inspired items, because we firmly believe that anyone can be a magical fairy princess and a total nerd at the same time. ;) </p>
 </div>
 </div>
+  <hr>
+  <h2>GHOST GiRL GOODS</h2>
+    <div class="row">
+        <div class="col-md-6">
+  <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
+</div>
+  <div class="col-md-6">
+  <p>GHOST GiRL GOODS is a clothing brand that fuses cool hip-hop looks and cute pop style into one. Our goals are to embrace differences and encourage confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration while designing each piece. GHOST GiRL GOODS has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. The GHOST GiRL GOODS team looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
+</div>
+</div>
 <p/>
 <hr>
 <h2><a href="https://kaetia.carrd.co/">KaetShop (remote)</a></h2>
@@ -331,12 +341,6 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
 </div>
 </div>
 <p/>
-  <!--
-  <h2>Frill Style</h2>
-  <p>Coming soon!</p>
-  <h2><a href="https://www.ghostgirlgoods.com/">Ghost Girl Goods</a></h2>
-  <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
--->
   <hr>
 
 </div>
