Add Enchanted Dream Couture

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -117,6 +117,18 @@
 </div>
 <p/>
 <hr>
+  <h2><a href="https://">Enchanted Dream Couture</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/edc.jpg" class="img-fluid" alt="Enchanted Dream Couture logo"/>
+</div>
+  <div class="col-md-8">
+  <p>Enchanted Dream Couture is an American Indie brand in Tennessee. Enchanted Dream Couture creates unique, detailed and elegant quality dresses and accessories that fit comfortably on different body sizes.</p>
+</p>
+</div>
+</div>
+<p/>
+<hr>
   <h2><a href="https://floresastorum.storenvy.com/">Flores Astorum (Remote)</a></h2>
     <div class="row">
         <div class="col-md-4">
