Add Lor to site

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -156,6 +156,17 @@
 </div>
 </div>
 <hr>
+  <h2><a href="http://youtube.com/c/lovelylor">Lovely Lor (with Holly Flynn)</a></h2>
+  <div class="row">
+    <div class="col-md-4">
+  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid" alt="Holly Flynn and Lovely Lor together"/>
+</div>
+<div class="col-md-8">
+  <p>Lovely Lor is a lolita fashion content creator with videos spanning across 10 years on YouTube. She’s an active member of multiple International Lolita Fashion Communities and enjoys documenting different lolita events around the world. Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in resources for beginners, entertainment for veteran lolitas and documenting the history of the fashion and community.  </p>
+  <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
+</div>
+</div>
+<hr>
   <h2><a href="http://www.puvithel.com">Puvithel</a></h2>
   <div class="row">
     <div class="col-md-6">
@@ -167,20 +178,6 @@
   <p>You can follow Puvithel on <a href="https://www.instagram.com/puvithel">Instagram</a> and <a href="https://www.facebook.com/Puvithel">Facebook</a>. You can also browse her website at <a href="http://www.puvithel.com">http://www.puvithel.com</a> and <a href="http://puvithel.etsy.com">Etsy</a>.</p>
 </div>
 </div>
-  <!--
-  <h2>Lovely Lor and Holly Flynn</h2>
-  <div class="row">
-    <div class="col-md-6">
-  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid" alt="Holly Flynn and Lovely Lor together"/>
-</div>
-<div class="col-md-6">
-  <p>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</p>
-</div>
-<div class="col-md-12">
-  <p>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</p>
-  <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
-</div>
-</div>-->
   <hr>
 
 </div>
