Add more links to registration and room booking; clean up FAQ because it's confusing to people who didn't reserve tickets

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -124,35 +124,21 @@
   <h3 class="section-header">Registration</h3>
   <p>See also <a href="./reg.html">our main registration page</a>.</p>
   <h4>Where do I buy my ticket?</h4>
-  <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase a ticket or pay the remainder of your reservation starting August 14th at 12:00 PM PT.</p>
-  <h4>How will ticket sales work in 2021?</h4>
-  <p>Ticket reservations opened on <b>June 26th at 12:00 PM PT</b>. We sold out of ticket reservations the same day they began. Thank you all for your support!</p>
-  <p><b>GA tickets</b> cost <b>$5</b> to reserve. <b>VIP tickets</b> cost <b>$20</b> to reserve. Only GA and VIP tickets were available during the reservation period.</p>
-  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, we are able to offer a limited number of <b>VIP and GA tickets</b> at full price. We have a number of partner passes available. Prices will be as follows:
+  <p>Buy your ticket now on our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a>.</p>
+  <h4>How much do tickets cost?</h4>
+  <p>Prices are as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
       <li><b>Partner Pass</b>: $20</li>
     </ul>
   </p>
-  <p>We are no longer offering Sunday-only tickets. The Partner Pass is a special ticket type for partners of attendees who do not wear J-fashion. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content.</p>
-  <h4>Why do I have to reserve a ticket first? Why is the process for buying a ticket different?</h4>
-  <p>We are offering this reserve option to help mitigate the risk involved in committing to an event while the global pandemic is ongoing. In the event that we cannot hold our event safely, those who reserved a ticket in 2021 will be refunded. In the interim, we only require you to put down a minimal down payment.</p>
-  <h4>I bought a ticket in 2020. Is it still good for 2021?</h4>
-  <p>Yes! All tickets purchased in 2020 have automatically been rolled over to 2021. However, you will need to rebook your room onsite using our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>.</p>
-  <h4>What are the perks associated with VIP tickets?</h4>
-  <p>VIP ticketholders get a premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content. We will provide specific details in the coming months as we get closer to our event. The remaining VIP tickets are in very short supply, so set an alarm if you want one!</p>
-  <h4>Ticket reservations sold out before I could reserve my ticket. Will there be more?</h4>
-  <p>Yes, we are able to offer a limited number of VIP and GA tickets at full price starting on August 14 at 12:00 PM PT.</p>
-  <h4>When will Partner Passes go on sale?</h4>
-  <p>Partner Passes will go on sale starting August 14 at 12 PM PT, at the same time when those who reserved tickets will be asked to pay the remaining cost.</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
   <p>You can use a discount code to buy your ticket anytime while full-price ticket sales are open. You cannot use your discount code on ticket reservations.</p>
   <h4>Will you sell single-day tickets?</h4>
-  <p>At this time we do not plan to sell single-day tickets.</p>
+  <p>We will not sell single-day tickets in 2021.</p>
   <h4>Will you sell tickets at the event?</h4>
-  <p>At this time to we do not plan to sell tickets at the event.</p>
+  <p>We will not sell tickets at the event - you must buy your ticket online before October 19.</p>
   <h4>I tried to use a discount code to buy my ticket, but it didn't work! What do I do?</h4>
   <p>Oh no! <a href="../contact.html">Contact us</a> right away, and provide a picture of your promo code. We will fix it ASAP!</p>
   <h4>I bought a ticket, but it turns out I can't go to Royal Vegas Retreat. Can I get a refund?</h4>
