--- a/event/reg.html
+++ b/event/reg.html
@@ -93,6 +93,7 @@
   <h1 class="sec01">
   <h1>RVR Registration</h1>
   <hr>
+  <p>Buy your ticket now on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite</a> before October 19!</p>
   <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>. The final payment on ticket reservations is due September 1st.</p> 
   <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Sales will start on August 14th at 12:00 PM PT. Prices will be as follows:
