--- a/vegas.html
+++ b/vegas.html
@@ -93,6 +93,7 @@
     <h3>MGM Grand Las Vegas, NV</h3>
     <h3>November 19 - November 21, 2021</h3>
 <h1 class="sec01">
+  <p><a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Buy your ticket  on Eventbrite</a> and <a href="https://book.passkey.com/go/sroy1121mg">book your room on Passkey</a> before October 19!</p>
 <p>
    ♥ <a href="./event/event-faq.html">FAQ</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
               <a href="./event/reg.html">Registration</a> ♥
