Add fashion show page to nav

--- a/event/programming.html
+++ b/event/programming.html
@@ -32,6 +32,7 @@
               <p class="sub-menu">
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
+              <a href="./fashion-show.html">Fashion Show</a></br>
               <a href="./programming.html" class="active">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
