--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -32,7 +32,8 @@
               <p class="sub-menu">
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
-              <a href="./programming.html" class="active">Programming and Schedule</a></br>
+              <a href="./fashion-show.html" class="active">Fashion Show</a></br>
+              <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
               <a href="./special-guests.html">Special Guests</a></br>
