--- a/event/venue.html
+++ b/event/venue.html
@@ -33,6 +33,7 @@
               <p class="sub-menu">
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
+              <a href="./fashion-show.html">Fashion Show</a></br>
               <a href="./programming.html" >Programming and Schedule</a></br>
               <a href="./reg.html" >Registration</a></br>
               <a href="./venue.html" class="active">Room Block and Venue</a></br>
