Add link to GGG

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -115,7 +115,7 @@
 </div>
 </div>
   <hr>
-  <h2>GHOST GiRL GOODS</h2>
+  <h2><a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a></h2>
     <div class="row">
         <div class="col-md-6">
   <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
