--- a/event/vendors.html
+++ b/event/vendors.html
@@ -118,7 +118,7 @@
 </div>
 <p/>
 <hr>
-  <h2><a href="https://">Enchanted Dream Couture</a></h2>
+  <h2><a href="https://www.etsy.com/shop/enchanteddreamwear">Enchanted Dream Couture</a></h2>
     <div class="row">
         <div class="col-md-4">
   <img src="../images/vendors/edc.jpg" class="img-fluid" alt="Enchanted Dream Couture logo"/>
