--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -87,13 +87,52 @@
 
 
 </div>
-
 <div class="row content">
 
   <h1 class="sec01">
   <h1>RVR 2021 Fashion Show</h1>
   <hr>
-  <p>Coming soon!</p>
+  <h1 class="sec01">
+      <center>
+  <p><a href="https://fluffyshow.com">Apply to model now on Fluffy Show!</a></p>
+</center>
+<h2 class="section-header">Our Fashion Shows</h2>
+<p>We are proud to host two fashion shows at Royal Vegas Retreat 2021: one for all things J-fashion, and one dedicated to Lolita fashion! <a href="https://fluffyshow.com">Model applications are open until October 19 on Fluffy Show.</a> Please keep in mind that all models must have a GA or VIP ticket to Royal Vegas Retreat. Read on to find our more about each show.</p>
+<h3 class="section-header">All Things J-Fashion</h3>
+<h4>Friday, November 19</h4>
+<p>Our All Things J-Fashion show will feature the following brands:
+  <ul>
+    <li><a href="https://www.fluffytori.com/">Fluffy Tori</a></li>
+    <li><a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a></li>
+    <li><a href="https://www.etsy.com/shop/kittykaya">KittyKaya</a></li>
+    <li><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></li>
+    <li><a href="https://www.puvithel.com/">Puvithel</a></li>
+    <li><a href="https://theblackribbon.com/">The Black Ribbon</a></li>
+  </ul></p>
+<p>Models can apply to model in this show or both shows on <a href="https://fluffyshow.com">Fluffy Show</a> until October 19.</p>
+<h3 class="section-header">Lolita Fashion</h3>
+<h4>Saturday, November 20</h4>
+<p>Our Lolita Fashion show will feature the following brands:
+  <ul>
+    <li><a href="https://www.etsy.com/shop/enchanteddreamwear">Enchanted Dream Couture</a></li>
+    <li><a href="https://floresastorum.storenvy.com/">Flores Astorum</a></li>
+    <li><a href="https://www.fluffytori.com/">Fluffy Tori</a></li>
+    <li><a href="https://www.etsy.com/shop/kittykaya">KittyKaya</a></li>
+    <li><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></li>
+    <li><a href="https://www.puvithel.com/">Puvithel</a></li>
+    <li><a href="https://theblackribbon.com/">The Black Ribbon</a></li>
+  </ul></p>
+<p>Models can apply to model in this show or both shows on <a href="https://fluffyshow.com">Fluffy Show</a> until October 19.</p>
+<h3 class="section-header">How Do I Apply?</h3>
+<p>If you're interested in modeling, you can apply NOW on <a href="https://fluffyshow.com">Fluffy Show</a>. Here's how it works:
+  <ol>
+    <li>Create an account on Fluffy Show</li>
+    <li>Create a model profile - this might take a little while because your profile will have a lot of information in it! Just remember that you can use this profile to apply to any other show that uses Fluffy Show, so you only have to enter all of this information one time.</li>
+    <li>Apply to the shows you're interested in! For Royal Vegas Retreat, you can apply to either or both of our shows.</li>
+    <li>After the October 19 deadline, our team will close applications and work with brands to select models. We need all the models we can get to put on an amazing show, so please apply!</li>
+  </ol>
+</p>
+<p>If you have any questions, feel free to drop us a line: <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
 </div>
 
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
