--- a/about/privacy.html
+++ b/about/privacy.html
@@ -35,6 +35,7 @@
          <a href="../vegas.html">RVR Home</a></br>
         <a href="../event/event-faq.html">Event FAQ</a></br>
         <a href="../event/fashion-show.html">Fashion Show</a></br>
+        <a href="../event/panels.html">Panels</a></br>
         <a href="../event/programming.html">Programming and Schedule</a></br>
         <a href="../event/reg.html">Registration</a></br>
         <a href="../event/venue.html">Room Block and Venue</a></br>
