--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -33,6 +33,7 @@
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
               <a href="./fashion-show.html" class="active">Fashion Show</a></br>
+              <a href="./panels.html">Panels</a></br>
               <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
