--- a/event/volunteers.html
+++ b/event/volunteers.html
@@ -34,6 +34,7 @@
                <a href="../vegas.html">RVR Home</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
               <a href="./fashion-show.html">Fashion Show</a></br>
+              <a href="./panels.html">Panels</a></br>
               <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
               <a href="./venue.html">Room Block and Venue</a></br>
