Add panels page to main page

--- a/vegas.html
+++ b/vegas.html
@@ -97,10 +97,10 @@
 <h1 class="sec01">
   <p><a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Buy your ticket  on Eventbrite</a> and <a href="https://book.passkey.com/go/sroy1121mg">book your room on Passkey</a> before October 19!</p>
 <p>
-   ♥ <a href="./event/event-faq.html">Event FAQ</a> ♥ <a href="./event/fashion-show.html">Fashion Show</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
-              <a href="./event/reg.html">Registration</a> ♥
-              <a href="./event/special-guests.html">Special Guests</a> ♥ <br> 
-               ♥ <a href="./event/swap-meet.html">Swap Meet</a>  ♥ 
+   ♥ <a href="./event/event-faq.html">Event FAQ</a> ♥ <a href="./event/fashion-show.html">Fashion Show</a> ♥ <a href="./event/panels.html">Panels</a> ♥ <a href="./event/programming.html">Programming and Schedule</a> ♥
+              <a href="./event/reg.html">Registration</a> ♥ <br> 
+               ♥ <a href="./event/special-guests.html">Special Guests</a> ♥ 
+              <a href="./event/swap-meet.html">Swap Meet</a>  ♥ 
               <a href="./event/tourists.html">Tourists</a> ♥ 
               <a href="./event/vendors.html">Vendors</a> ♥
               <a href="./event/venue.html">Venue</a> ♥
