Add panel page details

--- a/event/panels.html
+++ b/event/panels.html
@@ -93,7 +93,14 @@
   <h1 class="sec01">
   <h1>RVR 2021 Panels</h1>
   <hr>
-  <p>Coming soon!</p>
+  <h1 class="sec01">
+      <center>
+  <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdDVMzNxeCH2F6_LuZkHPy6fRIcd1FGXS2Fyj48H8tIEoiXcQ/viewform">Apply to present a panel NOW!</a></p>
+</center>
+<h2 class="section-header">Community Panels</h2>
+<p>We are proud to host a track of community-presented content at Royal Vegas Retreat 2021. Please apply now <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDVMzNxeCH2F6_LuZkHPy6fRIcd1FGXS2Fyj48H8tIEoiXcQ/viewform">using our Google form</a> by October 1. All panelists must have a GA or VIP badge to RVR 2021.</p>
+<h2 class="section-header">Special Guest Panels</h2>
+<p>Our special guests will present panels all weekend long on our main stage! Stay tuned for more details on our <a href="./programming.html">Programming and Schedule page</a>, and see our special guests <a href="./special-guests.html">here</a>!</p>
 
 </div>
 
