Add coord contest page to nav

--- a/about/contact.html
+++ b/about/contact.html
@@ -33,6 +33,7 @@
 			<div class="content_list left" id="thisList_1">
 				<p class="sub-menu">
          <a href="../vegas.html">RVR Home</a></br>
+         <a href="../event/coord-contests.html">Coord Contests</a></br>
         <a href="../event/event-faq.html">Event FAQ</a></br>
         <a href="../event/fashion-show.html">Fashion Show</a></br>
         <a href="../event/panels.html">Panels</a></br>
