--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -31,6 +31,7 @@
             <div class="content_list left" id="thisList_1">
               <p class="sub-menu">
                <a href="../vegas.html">RVR Home</a></br>
+               <a href="./coord-contests.html">Coord Contests</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
               <a href="./fashion-show.html" class="active">Fashion Show</a></br>
               <a href="./panels.html">Panels</a></br>
