--- a/event/programming.html
+++ b/event/programming.html
@@ -114,19 +114,19 @@
   <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Fashion Shows</h4>
   <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
-  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show!</a> On September 14, we will open our shows to applications on Fluffy Show. Application deadline: October 19</p>
+  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show and apply today!</a> See our <a href="./fashion-show">Fashion Show page</a> for more information.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion General</h4>
-  <p>Love to compete? Put your coording skills to the test. All Lolita fashion and Lolita-adjacent (i.e. Ouji, EGA, fusion with other J-fashion, etc.) coordinates welcome.</p> 
+  <p>Love to compete? Put your coording skills to the test. All Lolita fashion and Lolita-adjacent (i.e. Ouji, EGA, fusion with other J-fashion, etc.) coordinates welcome. See our <a href="./coord-contests.html">Coord Contests page</a> for more information.</p> 
   <p>Judges and prizes to be announced.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Special Guest Panels</h4>
   <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
-  <p>More info coming soon! For now, you can fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1.</p>
+  <p>Want to present a panel at RVR 2021? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1 or see our <a href="./panels.html">Panels page</a> for more info.</p>
   <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls - stay tuned for more details!</p>
+  <p>We are planning exciting, interactive content for night owls, including movie screenings, games, and more in a fun, chill atmosphere - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 2</h2> 
   <h3 class="section-header">Saturday, November 20 2021</h3>
@@ -134,24 +134,21 @@
   <p>All day long, enjoy browsing our <a href="./vendors.html">vendors' room</a> for apparel, accessories, jewelry, novelties, and art from our talented vendors.</p>
   <h4>Swap Meet</h4>
   <p>Support the secondhand market! Shop 'til you drop or <a href="https://www.eventbrite.com/e/rvr-2021-swap-meet-tickets-168024398499">sign up to sell starting September 6</a>. See our <a href="./swap-meet.html">Swap Meet page</a> for more details.</p>
-  <h4>Special Guest Panels</h4>
-  <p>To be announced!</p>
-  <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Fashion Shows</h4>
   <p>On Friday and Saturday afternoon, our brands will show off their collections on the runway. See their looks - then head to the vendors' room to buy them!</p>
-  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show!</a> On September 14, we will open our shows to applications on Fluffy Show. Application deadline: October 19</p>
+  <p>Interested in modeling in our fashion show? <a href="https://fluffyshow.com">Create a profile on Fluffy Show and apply today!</a> See our <a href="./fashion-show">Fashion Show page</a> for more information.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>Coord Contest - Lolita Fashion Handmade</h4>
-  <p>Are you a talented sewist who regularly makes their own coords? Wear your best handmade outfit - by which we mean all main pieces (dresses, blouses, skirts, trousers, vests, etc.) must be handmade by you! Entrants are not required to make their own shoes, socks, accessories, or jewelry, but we strongly encourage you to show off as much of your handiwork as possible!</p>
+  <p>Are you a talented sewist who regularly makes their own coords? Wear your best handmade outfit - by which we mean all main pieces (dresses, blouses, skirts, trousers, vests, etc.) must be handmade by you! Entrants are not required to make their own shoes, socks, accessories, or jewelry, but we strongly encourage you to show off as much of your handiwork as possible! See our <a href="./coord-contests.html">Coord Contests page</a> for more information.</p>
   <p>Judges and prizes to be announced.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
     <h4>Special Guest Panels</h4>
   <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
-  <p>More info coming soon! For now, you can fill out <a href="https://docs.google.com/forms/d/1YxTfMdrMICPshCWJZEhVzcrM3m3JuhnM3vMHU5QEQy4/edit?usp=sharing">our community panelist application</a> by October 1.</p>
+  <p>Want to present a panel at RVR 2021? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1 or see our <a href="./panels.html">Panels page</a> for more info.</p>
   <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls - stay tuned for more details!</p>
+  <p>We are planning exciting, interactive content for night owls, including movie screenings, games, and more in a fun, chill atmosphere - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 3</h2>
   <h3 class="section-header">Sunday, November 21 2021</h3>
@@ -165,7 +162,7 @@
   <p><b>VIP Perk:</b> VIPs will have priority seating at this event.</p>
   <h4>VIP/Staff Afterparty</h4>
   <p>Not ready for the weekend to end? For VIPs and staff, we have the solution: join us at our afterparty! Wind down with us at this exclusive event.</p>
-  <p><b>VIP Perk:</b> This event is open to VIPs, special guests, and staff only.</p>
+  <p><b>VIP Perk:</b> This event is open to VIPs, special guests, staff, and volunteers only.</p>
   <hr>
 
   <h1 class="sec01">
