Add open mic to nav

--- a/event/coord-contests.html
+++ b/event/coord-contests.html
@@ -34,6 +34,7 @@
                <a href="./coord-contests.html" class="active">Coord Contests</a></br>
               <a href="./event-faq.html" >Event FAQ</a></br>
               <a href="./fashion-show.html">Fashion Show</a></br>
+              <a href="./open-mic.html">Open Mic Night</a></br>
               <a href="./panels.html">Panels</a></br>
               <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
