--- a/404.html
+++ b/404.html
@@ -37,8 +37,10 @@
             <div class="content_list left" id="thisList_1">
               <p class="sub-menu">
                <a href="./vegas.html" >RVR Home</a></br>
+               <a href="./event/coord-contests.html">Coord Contests</a></br>
               <a href="./event/event-faq.html">Event FAQ</a></br>
               <a href="./event/fashion-show.html">Fashion Show</a></br>
+              <a href="./event/open-mic.html">Open Mic Night</a></br>
               <a href="./event/panels.html">Panels</a></br>
               <a href="./event/programming.html">Programming and Schedule</a></br>
               <a href="./event/reg.html">Registration</a></br>
