--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -35,6 +35,7 @@
                <a href="./coord-contests.html">Coord Contests</a></br>
               <a href="./event-faq.html" class="active">Event FAQ</a></br>
               <a href="./fashion-show.html">Fashion Show</a></br>
+              <a href="./open-mic.html">Open Mic Night</a></br>
               <a href="./panels.html">Panels</a></br>
               <a href="./programming.html">Programming and Schedule</a></br>
               <a href="./reg.html">Registration</a></br>
