--- a/vegas.html
+++ b/vegas.html
@@ -35,6 +35,7 @@
                <a href="./event/coord-contests.html">Coord Contests</a></br>
               <a href="./event/event-faq.html">Event FAQ</a></br>
               <a href="./event/fashion-show.html">Fashion Show</a></br>
+              <a href="./event/open-mic.html">Open Mic Night</a></br>
               <a href="./event/panels.html">Panels</a></br>
               <a href="./event/programming.html">Programming and Schedule</a></br>
               <a href="./event/reg.html">Registration</a></br>
