Remove community panel form

--- a/event/programming.html
+++ b/event/programming.html
@@ -98,8 +98,9 @@
   <hr>
   <p>We're planning an incredible event stacked with fashion shows, a tea party, games, panels, and shopping.</p>
   <p>We will release more information about official event programming as we get closer to the event, including special guest panels and VIP events.</p>
-  <p>Interested in presenting a panel at Royal Vegas Retreat? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1. We will notify prospective panelists of acceptance, rejection, or waitlist status by October 9.</p>
-  <p>Applications for models and coordinate contest entrants will open in September and October. Please stay tuned for more details!</p>
+  <p>Community panel applications are now closed. We will notify prospective panelists of acceptance, rejection, or waitlist status by October 9.</p>
+  <p>Fashion show model applications are now open. <a href="https://fluffyshow.com">Sign up now on Fluffy Show</a>, or see our <a href="./fashion-show.html">Fashion Show page for more details</a>.</p>
+  <p>Coord contest entries will open starting October 12. See our <a href="./coord-contests.html">Coord Contests page</a> for more info.</p>
   <p>Interested in casual excursions around the strip? Join our <a href="https://www.facebook.com/groups/royalvegasretreat">Facebook group</a> to help us plan!</p>
   <p>Check out our tentative schedule below - subject to change prior to event.</p>
   <h2 class="section-header">Before the Event</h2>
@@ -125,9 +126,9 @@
   <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
-  <p>Want to present a panel at RVR 2021? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1 or see our <a href="./panels.html">Panels page</a> for more info.</p>
+  <p>Attendees will present panels on a variety of Lolita and J-fashion topics. Stay tuned for more info!</p>
   <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls, including movie screenings, games, and more in a fun, chill atmosphere - stay tuned for more details!</p>
+  <p>We are planning exciting, interactive content for night owls, including movie screenings and an <a href="./open-mic.html">open mic night</a> in a fun, chill atmosphere - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 2</h2> 
   <h3 class="section-header">Saturday, November 20 2021</h3>
@@ -147,9 +148,9 @@
   <p>More info coming soon! For now, see our <a href="./special-guests.html">special guest lineup</a> and get hype.</p>
   <p><b>VIP Perk:</b> VIPs will have priority seating at all special guest panels.</p>
   <h4>Community Panels</h4>
-  <p>Want to present a panel at RVR 2021? Fill out <a href="https://forms.gle/nWcGEikwx876A9Wi9">our community panelist application</a> by October 1 or see our <a href="./panels.html">Panels page</a> for more info.</p>
+  <p>Attendees will present panels on a variety of Lolita and J-fashion topics. Stay tuned for more info!</p>
   <h4>Late-night content</h4>
-  <p>We are planning exciting, interactive content for night owls, including movie screenings, games, and more in a fun, chill atmosphere - stay tuned for more details!</p>
+  <p>We are planning exciting, interactive content for night owls, including movie screenings and an <a href="./open-mic.html">open mic night</a> in a fun, chill atmosphere - stay tuned for more details!</p>
 
   <h2 class="section-header">Day 3</h2>
   <h3 class="section-header">Sunday, November 21 2021</h3>
