Update about page

--- a/about.html
+++ b/about.html
@@ -178,6 +178,8 @@
     <p><a href="https://www.instagram.com/ska_skank_redemption/">Ryan</a> is Nif's loving husband, and our transportation, logistics, and advanced arts and crafts coordinator. He may have taken your photo at one of our small events or at a convention. When he's not catering to his wife's extravagant whims, he loves playing pinball, gold panning, playing guitar and recording music, skateboarding, and restoring his vintage truck.</p>
   </div>
 </div>
+<p>Tiffany is our Art Lead and tackles our branding, merchandising, and all our convention's visual needs!</p>
+<p>Joan is our social media lead for People Announcements!</p>
 <p>We are proud to partner with <a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand</a> and <a href="https://www.roseforet.com/">Rosé Forêt</a> for support in the following domains:
   <ul>
     <li>Broadcasting</li>
